@@ -4257,6 +4257,7 @@ v0.33.19        26-Oct-2001
 
 	SETUP.sh
 		Better grep to check for excisting usernames like bbs, mbse.
+		Prepared for the NetBSD port.
 
 	libcommon.a:
 		When adding seenby entries, the zone number is copied from the
@@ -4332,6 +4333,8 @@ v0.33.19        26-Oct-2001
 		program, mbsebbs is only for registered users. This should 
 		fix all kinds of setuid and security problems with previous 
 		versions.
+		In the door.sys files is now a nodenumber written. This is
+		actually the tty record number.
 		QuickScan messages in netmail areas now only shows personal
 		messages.
 		The whoson list now uses mbtask to get the information.
